--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 "ejemplo de contenido" 
 "ejemplo de contenido linea 2" 
 "ejemplo de contenido linea 3"
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hola mundo</h1>
+</body>
+</html>
